<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="multiling.com.multilingualsampleapp.modules.Main.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.01"
            android:text="@string/str_select_language"
            android:textColor="#28231e"
            android:textSize="24sp"/>

        <LinearLayout
            android:id="@+id/englishPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/str_select_english"
                android:textColor="#28231e"
                android:textSize="20sp"
                tools:ignore="MissingPrefix"/>

            <ImageView
                android:id="@+id/englishTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check_mark"
                android:visibility="invisible"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/tamilPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                fontPath="fonts/Tamil-MuktaMalar-Regular.ttf"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/str_select_tamil"
                android:textColor="#28231e"
                android:textSize="20sp"
                tools:ignore="MissingPrefix"/>

            <ImageView
                android:id="@+id/tamilTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check_mark"
                android:visibility="invisible"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/hindiPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                fontPath="fonts/Hindi-Mukta-Regular.ttf"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/str_select_hindi"
                android:textColor="#28231e"
                android:textSize="20sp"
                tools:ignore="MissingPrefix"/>

            <ImageView
                android:id="@+id/hindiTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check_mark"
                android:visibility="invisible"/>


        </LinearLayout>

        <Button
            android:id="@+id/proceedBtn"
            android:layout_width="160dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/str_proceed"
            android:textColor="#ffffff"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
